{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 1146,
  "lineage": "63c043fa-b120-832a-bb54-646c9ccbe992",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:security-group/sg-085de2e280b8751a3",
            "description": "Security Group for EKS cluster",
            "egress": [],
            "id": "sg-085de2e280b8751a3",
            "ingress": [],
            "name": "cloudgrv-dev-eks",
            "name_prefix": "",
            "owner_id": "522838200446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudgrv-dev-eks",
              "Namespace": "cloudgrv",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-eks",
              "Namespace": "cloudgrv",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2377538955",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-085de2e280b8751a3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the cluster to receive communication from the worker nodes",
            "from_port": 0,
            "id": "sgrule-1855917235",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-085de2e280b8751a3",
            "self": false,
            "source_security_group_id": "sg-09754da8179df226e",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:security-group/sg-09754da8179df226e",
            "description": "Security Group for EKS worker nodes",
            "egress": [],
            "id": "sg-09754da8179df226e",
            "ingress": [],
            "name": "cloudgrv-dev-eks-workers",
            "name_prefix": "",
            "owner_id": "522838200446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudgrv-dev-eks-workers",
              "Namespace": "cloudgrv",
              "Stage": "dev",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "owned"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-eks-workers",
              "Namespace": "cloudgrv",
              "Stage": "dev",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-103918118",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09754da8179df226e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker kubelets and pods to receive communication from the cluster control plane",
            "from_port": 0,
            "id": "sgrule-1594115111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09754da8179df226e",
            "self": false,
            "source_security_group_id": "sg-085de2e280b8751a3",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1250809694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09754da8179df226e",
            "self": false,
            "source_security_group_id": "sg-09754da8179df226e",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0135fda29ca8c9671",
            "domain": "vpc",
            "id": "eipalloc-0135fda29ca8c9671",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-227-28-61.compute-1.amazonaws.com",
            "public_ip": "54.227.28.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudgrv-dev-eip-nat-gateway-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-eip-nat-gateway-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:internet-gateway/igw-05dc909bd8d33360e",
            "id": "igw-05dc909bd8d33360e",
            "owner_id": "522838200446",
            "tags": {
              "Name": "cloudgrv-dev-igw",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-igw",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0135fda29ca8c9671",
            "connectivity_type": "public",
            "id": "nat-06ad95621d9826420",
            "network_interface_id": "eni-0a9d6df6fbd3c765c",
            "private_ip": "10.20.1.206",
            "public_ip": "54.227.28.61",
            "subnet_id": "subnet-00f455db6de6517e2",
            "tags": {
              "Name": "cloudgrv-dev-nat-gateway-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-nat-gateway-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:route-table/rtb-0c083b63b14999383",
            "id": "rtb-0c083b63b14999383",
            "owner_id": "522838200446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ad95621d9826420",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgrv-dev-private-routes-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-private-routes-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:route-table/rtb-0ec3e386baa64a4f4",
            "id": "rtb-0ec3e386baa64a4f4",
            "owner_id": "522838200446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ad95621d9826420",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgrv-dev-private-routes-2",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-private-routes-2",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:route-table/rtb-0e9a6b4bba52b53ad",
            "id": "rtb-0e9a6b4bba52b53ad",
            "owner_id": "522838200446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dc909bd8d33360e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgrv-dev-public-routes",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-public-routes",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ebd2484a2291768",
            "route_table_id": "rtb-0c083b63b14999383",
            "subnet_id": "subnet-0324eaef7943e896e"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036da6107205baa61",
            "route_table_id": "rtb-0ec3e386baa64a4f4",
            "subnet_id": "subnet-05359ee3702e8da29"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035241e7b307f311f",
            "route_table_id": "rtb-0e9a6b4bba52b53ad",
            "subnet_id": "subnet-00f455db6de6517e2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fac1fe60e3d56d9b",
            "route_table_id": "rtb-0e9a6b4bba52b53ad",
            "subnet_id": "subnet-00585c6897c2e90ec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-0324eaef7943e896e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0324eaef7943e896e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudgrv-dev-private-subnets-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-private-subnets-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-05359ee3702e8da29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05359ee3702e8da29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudgrv-dev-private-subnets-2",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-private-subnets-2",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-00f455db6de6517e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f455db6de6517e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudgrv-dev-public-subnets-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-public-subnets-1",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:subnet/subnet-00585c6897c2e90ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00585c6897c2e90ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522838200446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudgrv-dev-public-subnets-2",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cloudgrv-dev-public-subnets-2",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d87a836f9d737f21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522838200446:vpc/vpc-0d87a836f9d737f21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0003e19b324babbf4",
            "default_route_table_id": "rtb-07b9c2faa0216d776",
            "default_security_group_id": "sg-0c74aacd47a0a48d2",
            "dhcp_options_id": "dopt-d666a6ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d87a836f9d737f21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b9c2faa0216d776",
            "owner_id": "522838200446",
            "tags": {
              "Location": "Virginia",
              "Name": "cloudgrv-vpc-dev",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            },
            "tags_all": {
              "Location": "Virginia",
              "Name": "cloudgrv-vpc-dev",
              "kubernetes.io/cluster/cloudgrv-dev-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}